CSS: Fix navbar buttons, Bliss OS alignment

--- a/css/style.css
+++ b/css/style.css
@@ -121,10 +121,10 @@ body > .container-fluid {
   border-radius: 0;
   -webkit-transition: background-color .2s ease 0s;
   transition: background-color .2s ease 0s; }
-.navbar > .container {padding: 4px 0 0 0;width: 100%}
+.navbar > .container {padding: 4px 0 0 0;width: 100%;margin-top:2px;}
 .navbar-brand {
   opacity: 0;
-  margin-top: 7px;
+  margin-top: 5px;
   padding: 15px 0;
   color: #ffffff;
   font-weight: 400; }
@@ -134,7 +134,7 @@ body > .container-fluid {
   font-weight: 500;
   font-size: 1em;
   text-transform: lowercase;
-  margin: 9px 5px 5px 5px;
+  margin: 3px 5px;
   border: 1px solid transparent;
   border-radius: 5px;
   -webkit-transition: color .2s ease 0s, border-color .2s ease 0s;
